<resources>
    <string name="app_name">ExperimentTwo</string>
    <string name="base">基础</string>
    <string name="more">拓展</string>
    <string name="username_title">用户名:</string>
    <string name="password_title">密码:</string>
    <string name="login_button_text">登录</string>
    <string name="register_button_text">注册</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="title">中山大学课外体育积分电子认证系统</string>
    <string name="student">学生</string>
    <string name="teacher">教师</string>
    <string name="group">社团</string>
    <string name="manager">管理者</string>
</resources>
