<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 标题 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/title"
        android:textColor="@color/primary_black"
        android:textSize="@dimen/title_text" />

    <!-- 中间图片 -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:src="@mipmap/sysu" />

    <!-- 引入基本布局，内容定义在layout/base_table中，这一块会延迟加载 -->
    <ViewStub
        android:id="@+id/base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_margin"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout="@layout/base_table" />

    <!-- 引入扩展布局，内容定义在layout/extend_table中，这一块会延迟加载 -->
    <ViewStub
        android:id="@+id/extend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout="@layout/extend_table" />

    <!-- 单选按钮集合 -->
    <RadioGroup
        android:id="@+id/parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/normal_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/student"
            style="@style/my_radio_button_style"
            android:checked="true"
            android:text="@string/student" />

        <RadioButton
            android:id="@+id/teacher"
            style="@style/my_radio_button_style"
            android:text="@string/teacher" />

        <RadioButton
            android:id="@+id/group"
            style="@style/my_radio_button_style"
            android:text="@string/group" />

        <RadioButton
            android:id="@+id/manager"
            style="@style/my_radio_button_style"
            android:layout_marginRight="@dimen/no_margin"
            android:text="@string/manager" />
    </RadioGroup>

    <!-- 底部按钮 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/login"
            style="@style/my_button_style"
            android:layout_marginRight="@dimen/normal_margin"
            android:text="@string/login_button_text" />

        <Button
            android:id="@+id/register"
            style="@style/my_button_style"
            android:text="@string/register_button_text" />
    </LinearLayout>

</LinearLayout>
